fixed landing page alignment

--- a/src/components/practice-page.css
+++ b/src/components/practice-page.css
@@ -5,8 +5,15 @@
   font-weight: 100;
 }
 
+.row {
+  
+}
 .practice-page{
-  margin-top: 75px;
+  margin-top: 85px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border: gray solid 1px;
+  padding: 5px;
 }
 
 .feedback-message {
@@ -42,7 +49,6 @@ h1 {
 }
 
 .horizontal-divider {
-  border-top: solid thin #DFE0E2;
   margin-top: 100px;
   margin-right: 25px;
 }
